# rules_clojure

./: .bazelignore  .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  deps.edn  design.md  extensions.bzl  frozen_deps_install.json  macros.bzl  maven_clojure_old_lock.json  maven_deps_install_lock.json  multitool.lock.json  repositories.bzl  rules.bzl  rules_clojure_maven_deps_install.json  runtime.bzl  setup.bzl  toolchain.bzl  toolchains.bzl
.circleci/: config.yml
.clj-kondo/: config.edn
.github/workflows/: ci.yml
docs/: rules.md
examples/gen_srcs_bench/: BUILD.bazel  README.md  WORKSPACE  deps.edn  generator.clj
examples/setup/custom/: BUILD.bazel  WORKSPACE
examples/setup/default/: BUILD.bazel  WORKSPACE  example.clj
examples/setup/default/example_library/: BUILD
examples/setup/default/example_library/src/example/: core.clj
examples/simple/: .bazelrc  MODULE.bazel  WORKSPACE  deps.edn
examples/simple/src/example/: BUILD  core.clj
examples/simple/test/example/: BUILD  core_test.clj
examples/stress/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  deps.edn
examples/stress/test/: BUILD.bazel  fipp_test.clj  ham_fisted_test.clj  ml_dataset_test.clj  tools_deps_alpha_test.clj
gazelle/: BUILD.bazel  configure.go  configure_test.go  deps.bzl  generate.go  generate_test.go  go.mod  go.sum  lang.go  lang_test.go  resolve.go  resolve_test.go
gazelle/clojureconfig/: BUILD.bazel  config.go  config_test.go
gazelle/clojureparser/: BUILD.bazel  contract_test.go  lifecycle_test.go  parser.go  parser_test.go
java/: BUILD.bazel
java/rules_clojure/: BUILD.bazel  ClojureWorker.java  DynamicClassLoader.java  worker.java
rules/: BUILD  binary.bzl  clojure.bzl  common.bzl  compile.bzl  compile.clj  jar.bzl  library.bzl  namespace.bzl  repl.bzl  repositories.bzl  test.bzl  tools_deps.bzl
scripts/: BUILD  compile.clj  deps.edn  jar.clj  library.clj  ns.clj  test.clj
scripts/src/: compile.clj  gen_build.clj
scripts/src/rules_clojure/: BUILD  gen_build.clj  jar.clj
src/rules_clojure/: BUILD  BUILD.bazel  bootstrap.clj  bootstrap_compiler.clj  bootstrap_gazelle_server.clj  bootstrap_gen_build.clj  bootstrap_libfs.clj  bootstrap_testrunner.clj  bootstrap_worker.clj  classloader.clj  compile.clj  fs.clj  gazelle_server.bb  gazelle_server.clj  gen_build.clj  jar.clj  parse.clj  persistentClassLoader.clj  persistent_classloader.clj  testrunner.clj  util.clj  worker.clj
src/rules_clojure/java/: classpath.clj
src/rules_clojure/namespace/: file.clj  find.clj  parse.clj
src/rules_clojure/tools/: reader.clj
src/rules_clojure/tools/reader/: default_data_readers.clj  edn.clj  reader_types.clj
src/rules_clojure/tools/reader/impl/: commons.clj  errors.clj  inspect.clj  utils.clj
src/tools/aot/: Aot.java  aot_template.java
test/rules_clojure/: BUILD  BUILD.bazel  aot_only_fixture.clj  compile_test.clj  fs_test.clj  gazelle_server_bb_test.bb  gazelle_server_test.clj  gen_build_test.clj  jar_test.clj  persistent_classloader_test.clj  rollup_rules_fixtures.edn  run_bb_test.sh  test_utils.clj  testrunner_test.clj  worker_test.clj  worker_tests.clj
test/rules_clojure/testrunner_fixtures/: bad_fixture.clj  mixed.clj  passing.clj
tests/: BUILD  app-java-test.clj  app-test.clj  app.clj  binary.bzl  binary.sh  empty.clj  library-test.clj  library.bzl  library.clj  library.sh  ns-to-file-path.clj  suite.bzl  test.clj  unconditionally-failing-test.clj  unconditionally-passing-test.clj
tests/assert/: repl.sh  test.sh
tests/transitive/: BUILD  app.clj  test.clj
tests/transitive/greeter/: BUILD  HelloJava.java  hello.clj
tools/: freeze-deps.py
