module(name = "rules_clojure",
       version = "0.5")

bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_jvm_external", version = "6.8")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    name = "maven_deps",
    artifacts = [
        "org.clojure:clojure:1.12.1",
        "org.clojure:spec.alpha:0.5.238",
        "org.clojure:core.specs.alpha:0.4.74",
        "org.clojure:data.json:2.4.0",
        "org.clojure:tools.deps:0.28.1578",
        "org.clojure:tools.namespace:1.1.0"
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://repo.clojars.org/"
    ],
    fail_if_repin_required = True
)

maven.amend_artifact(
    name = "maven_deps",
    coordinates = "org.clojure:clojure",
    exclusions = ["org.clojure:spec.alpha",
                  "org.clojure:core.specs.alpha"]
)

maven.amend_artifact(
    name = "maven_deps",
    coordinates = "org.clojure:spec.alpha",
    exclusions = ["org.clojure:clojure",
                  "org.clojure:core.specs.alpha"]
)

maven.amend_artifact(
    name = "maven_deps",
    coordinates = "org.clojure:core.specs.alpha",
    exclusions = ["org.clojure:clojure",
                  "org.clojure:spec.alpha"]
)

# used for testing
maven.install(
    name = "clojure_old",
    artifacts = [
        "org.clojure:clojure:1.8.0",],
    fail_if_repin_required = True,
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://repo.clojars.org/"
    ])

use_repo(maven, "maven_deps")
use_repo(maven, "clojure_old")

bazel_dep(name = "example-simple", version = "0.0.0", dev_dependency = True)
local_path_override(module_name = "example-simple",
                    path = "examples/simple")
