load("@gazelle//:def.bzl", "gazelle_binary")
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gazelle_lib",
    srcs = [
        "configure.go",
        "generate.go",
        "lang.go",
        "resolve.go",
    ],
    data = [
        "//src/rules_clojure:gazelle_server.bb",
        "@multitool//tools/bb",
    ],
    importpath = "github.com/griffinbank/rules_clojure/gazelle",
    visibility = ["//visibility:public"],
    deps = [
        "//gazelle/clojureconfig",
        "//gazelle/clojureparser",
        "@gazelle//config:go_default_library",
        "@gazelle//label:go_default_library",
        "@gazelle//language:go_default_library",
        "@gazelle//repo:go_default_library",
        "@gazelle//resolve:go_default_library",
        "@gazelle//rule:go_default_library",
        "@rules_go//go/runfiles:go_default_library",
    ],
)

go_test(
    name = "gazelle_test",
    srcs = [
        "configure_test.go",
        "generate_test.go",
        "resolve_test.go",
    ],
    embed = [":gazelle_lib"],
    deps = [
        "//gazelle/clojureconfig",
        "//gazelle/clojureparser",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@gazelle//config:go_default_library",
        "@gazelle//label:go_default_library",
        "@gazelle//resolve:go_default_library",
        "@gazelle//rule:go_default_library",
    ],
)

gazelle_binary(
    name = "gazelle_bin",
    languages = [":gazelle_lib"],
    visibility = ["//visibility:public"],
)

# The babashka script ships as a data dep so it lands in gazelle_bin's
# runfiles tree. The Go plugin's resolveParserScript reads its location
# from RUNFILES_DIR / TEST_SRCDIR.
filegroup(
    name = "gazelle_server_bb",
    srcs = ["//src/rules_clojure:gazelle_server.bb"],
    visibility = ["//visibility:public"],
)
