package(default_visibility = ["//visibility:public"])

load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

java_library(
    name = "ClojureWorker-lib",
    srcs = glob(["ClojureWorker.java"]),
    deps = [
        ":worker_protocol_java_proto",
        "@rules_clojure_maven//:org_projectodd_shimdandy_shimdandy_api",
        "@rules_clojure_maven//:com_google_code_gson_gson"],
    data = [
        "@rules_clojure_maven//:org_projectodd_shimdandy_shimdandy_impl",
        "//src/rules_clojure:jar-lib"]
)

java_binary(
    name = "ClojureWorker",
    main_class = "rules_clojure.ClojureWorker",
    runtime_deps = [
        ":ClojureWorker-lib",
    ],
)

FILES = [
    "worker_protocol",
]

[proto_library(
    name = s + "_proto",
    srcs = [s + ".proto"],
) for s in FILES]

[java_proto_library(
    name = s + "_java_proto",
    deps = [":" + s + "_proto"],
) for s in FILES]

# [java_lite_proto_library(
#     name = s + "_java_proto",
#     deps = [":" + s + "_proto"],
# ) for s in FILES]
