package(default_visibility = ["//visibility:public"])

java_library(
    name = "ClojureWorker-lib",
    srcs = ["ClojureWorker.java",
            "DynamicClassLoader.java"],
    deps = ["@rules_clojure_maven//:org_projectodd_shimdandy_shimdandy_api",
            "@rules_clojure_maven//:com_google_code_gson_gson"],
    ## shimdandy-impl and Clojure are not allowed to be on the startup classpath
    data = ["@rules_clojure_maven//:org_projectodd_shimdandy_shimdandy_impl",
            "//src/rules_clojure:jar-lib"])

java_binary(
    name = "ClojureWorker",
    main_class = "rules_clojure.ClojureWorker",
    runtime_deps = [
        ":ClojureWorker-lib",
    ],
)
