package(default_visibility = ["//visibility:public"])

java_library(
    name = "ClojureWorker-lib",
    srcs = ["ClojureWorker.java",
            "DynamicClassLoader.java"],
    deps = ["@rules_clojure_maven//:org_projectodd_shimdandy_shimdandy_api",
            "@rules_clojure_maven//:com_google_code_gson_gson",
            ":worker_java_proto"])

java_binary(
    name = "ClojureWorker",
    main_class = "rules_clojure.ClojureWorker",
    runtime_deps = [":ClojureWorker-lib"],
    jvm_flags = ["-Xmx500m", "-XX:MaxMetaspaceSize=1g"]
)

proto_library(
    name = "worker_proto",
    srcs = ["worker_protocol.proto"]
)

java_proto_library(
    name = "worker_java_proto",
    deps = [":worker_proto"],
)

proto_library(
    name = "clojure_compile_proto",
    srcs = ["clojure_compile.proto"]
)

java_proto_library(
    name = "clojure_compile_java_proto",
    deps = [":clojure_compile_proto"],
)
