load("@rules_clojure//:toolchain.bzl", "clojure_toolchain")
load("@rules_clojure//:rules.bzl", "clojure_library")

clojure_toolchain(
    name = "custom_toolchain_def",
    classpath = [
        "@maven//:org_clojure_clojure",
        "@maven//:org_clojure_core_specs_alpha",
        "@maven//:org_clojure_spec_alpha",
    ],
)

toolchain(
    name = "custom_toolchain",
    toolchain = ":custom_toolchain_def",
    toolchain_type = "@rules_clojure//:toolchain",
)

clojure_library(
    name = "example",
    srcs = ["example.clj"],
)
